updated: - added header control; - added click behavior for listbox (user could click on same item and he will see the preview); - some other fixes;

--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -16,6 +16,7 @@
     <service:ActualWidthToWidthConverter x:Key="ActualWidthConverter" />
     <converters:StringToStringConverter x:Key="StringConverter" />
     <service:IntToVisibilityConverter x:Key="IntToVisibilityConverter"></service:IntToVisibilityConverter>
+    <service:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"></service:BoolToVisibilityConverter>
 
     <Style TargetType="ToolTip">
         <Setter Property="Template">
