--- a/WSUI.Module/View/KindsView.xaml
+++ b/WSUI.Module/View/KindsView.xaml
@@ -99,7 +99,8 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                  VerticalContentAlignment="Center"
                  IsEnabled="{Binding Enabled,UpdateSourceTrigger=PropertyChanged}"
-                 HorizontalAlignment="Right">
+                 HorizontalAlignment="Right"
+                 Visibility="{Binding IsKindsVisible,UpdateSourceTrigger=PropertyChanged,Converter={StaticResource BoolToVisibilityConverter}}">
         </ListBox>
 
         <Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Visibility="{Binding VisibleTrialLabel,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" Margin="5">
