fixed criteria foe exchanged files; fixed the height of items for contacts; 5 contacts will be visible; etc

--- a/WSUI.Infrastructure/Controls/HightliteHyperlink.xaml
+++ b/WSUI.Infrastructure/Controls/HightliteHyperlink.xaml
@@ -7,8 +7,7 @@
   <Grid>
     <TextBlock>
       <Hyperlink Command="{Binding Path=DataContext.EmailClickCommand,ElementName=this}" CommandParameter="{Binding}">
-        <TextBlock TextWrapping="Wrap" x:Name="textBlock"
-
+        <TextBlock x:Name="textBlock" TextTrimming="CharacterEllipsis"
                    FontSize="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HightliteTextBlockBase}},Path=FontSizeLabel}"
                    FontStyle="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HightliteTextBlockBase}},Path=FontStyleLabel}"
                    FontWeight="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:HightliteTextBlockBase}},Path=FontWeightLabel}"
