--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -17,6 +17,7 @@
     <converters:StringToStringConverter x:Key="StringConverter" />
     <service:IntToVisibilityConverter x:Key="IntToVisibilityConverter"></service:IntToVisibilityConverter>
     <service:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"></service:BoolToVisibilityConverter>
+    <service:BoolToVisibilityConverter x:Key="InvertBoolToVisibilityConverter" IsInvert="True"></service:BoolToVisibilityConverter>
 
     <Style TargetType="ToolTip">
         <Setter Property="Template">
