added scroll behavior to contact details for attachments;

--- a/WSUI.Module/View/ContactDetailsView.xaml
+++ b/WSUI.Module/View/ContactDetailsView.xaml
@@ -330,7 +330,8 @@
                     <ListBox ItemsSource="{Binding Path=ItemsSource,UpdateSourceTrigger=PropertyChanged}"
                          ItemTemplateSelector="{StaticResource templateSelector}"
                          SelectedItem="{Binding SelectedElement,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                         HorizontalContentAlignment="Stretch">
+                         HorizontalContentAlignment="Stretch"
+                             ScrollViewer.ScrollChanged="ListBox_ScrollChanged">
                     </ListBox>
                 </TabItem>
             </Controls:MetroAnimatedSingleRowTabControl>
